--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/multer": "^1.4.5",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   },
@@ -30,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.95.6",
+    "multer": "^1.4.2",
     "pg": "^8.6.0"
   }
 }
